# ChangeLog for sci-mathematics/nauty
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/nauty/ChangeLog,v 1.3 2010/12/18 12:10:38 hwoarang Exp $

  18 Dec 2010; Markos Chandras <hwoarang@gentoo.org> nauty-2.4.2.ebuild:
  Stable on amd64 wrt bug #348636

  16 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> nauty-2.4.2.ebuild:
  x86 stable wrt bug #348636

*nauty-2.4.2 (24 Oct 2010)

  24 Oct 2010; Thomas Kahle <tomka@gentoo.org> +nauty-2.4.2.ebuild,
  +metadata.xml:
  New ebuild: sci-mathematics/nauty-2.4.2,
  migrated from science overlay, fixing bug 337810
