@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST nauty24r2.tar.gz 720754 RMD160 4d22200a646e453090cd8d31fc3adce6a1e47e69 SHA1 3f012beb399a9340f77d0104bf1c9bf1100e8286 SHA256 760f9cca43b8eb7dd083983ea0e137125ee8a181d460c970137cfb7490fe1621
-EBUILD nauty-2.4.2.ebuild 1013 RMD160 e7bdc16a8f9da9bc8889d75016a26837d62be628 SHA1 17338d344ce10c2c80dcc26e541b48f08a884583 SHA256 ffcf38584f22315e5de52735c05d77d6529f3c0f07d1dfebaabdb67960b701be
-MISC ChangeLog 638 RMD160 576e1378e392f093339fdf3302ec4cfe017867e1 SHA1 7f92370172dc45e34b85cfb928159d7795867c07 SHA256 cd1447d1a2fd9a61f13524c635d7eb9d34a721c647d793d98c6e56ea2abcfc98
+EBUILD nauty-2.4.2.ebuild 1116 RMD160 db74e42723f91400e4394927d99d1399f520b34d SHA1 d24fdf341b7d6d8756fe6609c0290e58ca6988b0 SHA256 bbf8f7cb2b9f606828d2f3dc963709505f1628b7b2787a515821cb9544af91f1
+MISC ChangeLog 754 RMD160 7f716b03fc181afc7d39f02956ec7d6a1868eb03 SHA1 7c642e4e94631fa92fe6d952d5d64853c2712900 SHA256 fc2b2c9182d7408af1240e23560c20822c12f7b391f995c751f6626ebf72d1bd
 MISC metadata.xml 525 RMD160 a61209de96721b0c73cd20666868966c6bd1c947 SHA1 82b7270bddbe0a7e02b6130ed1f1c567ad0aab59 SHA256 c9ca2c2d58578f5b40c214ea51bc2f5749148c85beb8e630ddc5c72822d59574
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk0MsmgACgkQ9/cejkQaxBDkjwCdEDOGcEo6wQNMgvwiUJnHsOdf
-cdIAniZviNufdfRJSfequ4CW+tNooATI
-=xgl3
+iF4EAREIAAYFAk+zoeQACgkQid6yGVZcMryjMQD9EVIRvbDEMZr59RqqZagV7IRp
+oZ78kQo6trldGYAVxbAA/130lMeTcqF2nXcEZ7Fue5kiPYrpL4jzmYDw5sBcbODw
+=sSb4
 -----END PGP SIGNATURE-----
