@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/nauty
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/nauty/ChangeLog,v 1.3 2010/12/18 12:10:38 hwoarang Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/nauty/ChangeLog,v 1.4 2012/05/16 12:47:23 tomka Exp $
+
+  16 May 2012; Thomas Kahle <tomka@gentoo.org> nauty-2.4.2.ebuild:
+  Install pdf manual with USE='doc'.  (Bug 415939)
 
   18 Dec 2010; Markos Chandras <hwoarang@gentoo.org> nauty-2.4.2.ebuild:
   Stable on amd64 wrt bug #348636
